--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "contracts",
+  "name": "FrozenWallet",
   "version": "1.0.0",
-  "description": "The contracts of ALIS project.",
+  "description": "The FrozenWallet by ALIS project.",
   "main": "truffle.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AlisProject/contracts.git"
+    "url": "https://github.com/AlisProject/FrozenWallet.git"
   },
-  "homepage": "https://github.com/AlisProject/contracts",
+  "homepage": "https://github.com/AlisProject/FrozenWallet",
   "author": "sot528 <sot528@gmail.com>",
   "license": "GPL-3.0",
   "devDependencies": {
@@ -25,7 +25,6 @@
     "eslint-plugin-import": "^2.7.0",
     "ethereumjs-testrpc": "^4.0.1",
     "fs": "^0.0.1-security",
-    "moment": "^2.18.1",
     "solgraph": "^0.2.6",
     "solium": "^0.5.4",
     "truffle": "^3.4.7"
@@ -38,7 +37,6 @@
     "lint": "yarn run eslint . -- --fix && yarn lint:sol",
     "compile": "rm -rf ./build/* && truffle compile",
     "clean": "rm -rf ./build/* && yarn truffle networks --clean",
-    "rpc": "yarn run testrpc -a 3 -i 10 -u 0 -u 1 -u 2",
     "deploy": "yarn run clean && yarn truffle compile && truffle deploy --network development"
   }
 }
