--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
         "allowForLoopAfterthoughts": true
       }
     ],
-    "no-await-in-loop": "off"
+    "no-await-in-loop": "off",
+    "prefer-destructuring": 0
   },
   "globals": {
     "web3": true,
